--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 <body>
 	<!-- Your landing page content goes here -->
 	<header>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Contact Us</a></li>
-			</ul>
-		</nav>
-	</header>
+  <nav>
+    <div class="menu-toggle">
+      <input type="checkbox">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 	<section>
 		<h1>Welcome to My Landing Page</h1>
 		<p>Here's some information about what we offer.</p>
 		<a href="#" class="cta-button">Sign Up Now</a>
 	</section>
 	<footer>
-		<p>&copy; 2023 My Company. All rights reserved.</p>
+		<p>&copy; 20ii23 My Company. All rights reserved.</p>
 	</footer>
 </body>
 </html>
